--- a/package.json
+++ b/package.json
@@ -10,11 +10,16 @@
   },
   "license": "MIT",
   "devDependencies": {
+    "@types/tmi.js": "^1.8.3",
+    "autoprefixer": "^10.4.13",
+    "postcss": "^8.4.21",
+    "tailwindcss": "^3.2.6",
     "typescript": "^4.9.5",
     "vite": "^4.1.1",
     "vite-plugin-solid": "^2.5.0"
   },
   "dependencies": {
-    "solid-js": "^1.6.10"
+    "solid-js": "^1.6.10",
+    "tmi.js": "^1.8.5"
   }
 }
