--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "vite-plugin-solid": "^2.5.0"
   },
   "dependencies": {
+    "@solidjs/router": "^0.7.0",
     "solid-js": "^1.6.10",
     "tmi.js": "^1.8.5"
   }
